# sol

./: .gitignore  404.html  CMakeLists.txt  Makefile  README.md  index.html  sitemap.xml
.github/workflows/: deploy.yml
asset/css/: extra.css
asset/js/: pinpad.js
auto/campaign_algorithms/: index.html
auto/campaign_despegue/: index.html
auto/campaign_memory/: index.html
auto/campaign_oop/: index.html
auto/campaign_plantilla/: index.html
auto/campaign_semana/: index.html
auto/campaign_solucion/: index.html
auto/campaign_stl/: index.html
auto/campaign_time/: index.html
auto/quest_entre_gatos/: index.html
auto/quest_entretenimiento_peligroso/: index.html
auto/quest_juego_peligroso/: index.html
auto/quest_logica_lunatica/: index.html
auto/quest_placeholder/: index.html
auto/quest_quest_template/: index.html
auto/quest_silicio_y_titanio/: index.html
auto/quest_solution_silicio_y_titanio/: index.html
auto/quest_solution_template/: index.html
auto/solution_entretenimiento_peligroso/: index.html
auto/solution_juego_peligroso/: index.html
auto/solution_logica_lunatica/: index.html
auto/solution_silicio_y_titanio/: index.html
campaign_admision/: index.html
campaign_algorithms/: index.html
campaign_bootcamp/: index.html
campaign_memory/: index.html
campaign_oop/: index.html
campaign_plantilla/: index.html
campaign_solucion/: index.html
campaigns/: index.html
codex/add_file_quest/: index.html
codex/cin_cout/: index.html
codex/clone_project/: index.html
codex/debugging/: index.html
codex/diagrams/: index.html
codex/open_quest/: index.html
codex/plataforma/: index.html
codex/run_quest/: index.html
codex_oop_syntax/: index.html
codex_stl_usage/: index.html
codices/: index.html
css/: extra.css
doc/: Makefile  README.md  autoindex.py  categories.md  tag.py
doc/guide/: .gitignore  Makefile  README.md  continuous_make.sh  main.py  mkdocs.yml
doc/guide/sections/: campaign_admision.md  campaign_algorithms.md  campaign_bootcamp.md  campaign_memory.md  campaign_oop.md  campaign_plantilla.md  campaign_solucion.md  campaigns.md  codex_oop_syntax.md  codices.md  index.md
doc/guide/sections/asset/css/: extra.css
doc/guide/sections/auto/: campaign_algorithms.md  campaign_despegue.md  campaign_memory.md  campaign_oop.md  campaign_plantilla.md  campaign_semana.md  campaign_solucion.md  campaign_stl.md  quest_arranca_tu_nave.md  quest_entre_gatos.md  quest_logica_lunatica.md  quest_placeholder.md  quest_quest_template.md  quest_silicio_y_titanio.md  quest_solution_silicio_y_titanio.md  quest_solution_template.md
doc/guide/sections/codex/: clone_project.md  debugging.md  open_quest.md  plataforma.md  run_quest.md  stl_usage.md
doc/guide/sections/css/: extra.css
doc/img/: sol_logo.xcf
doc/tag/: admision.md  algorithms.md  despegue.md  memory.md  oop.md  plantilla.md
doc/tool/: autoindex.py  campaign.py  code.py  codex.py  crypt.py  link_luna.py  markdown.py  quest.py  tag.py
quest/: README.md
quest/arranca_tu_nave/: main.cpp
quest/cat_herding/: CMakeLists.txt  Makefile  README.md
quest/entre_gatos/: README.md  main.cpp
quest/juego_peligroso/: CMakeLists.txt  README.md  main.cpp
quest/logica_lunatica/: CMakeLists.txt  Makefile  README.md  blue.cpp  blue.h  green.cpp  green.h  main.cpp  red.cpp  red.h  test.cpp
quest/placeholder/: CMakeLists.txt  README.md
quest/platform_setup/: README.md
quest/silicio_y_titanio/: README.md  main.cpp  test.cpp
quest/template/: CMakeLists.txt  Makefile  README.md
search/: search_index.json
solution/: README.md
src/: cat.cpp  cat.h
